embedding dropEst tool

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,10 @@ includeConfig "$baseDir/params.config"
 
 process {
   queue = 'short-sl7,long-sl7,mem_256,mem_512'
+  $dropTag {
+      cpus=8
+      memory='60G'			
+  }
 
   $mapping {
       queue = 'mem_1tb,short-sl7'
@@ -32,6 +36,6 @@ process {
 }
 
 
-process.container = '/software/bi/biocore_tools/Docker_files/docker-centos-perlbrew/indrops/singularity/biocorecrg_indrops-2017-06-07-096bc4f64e13.img'
-singularity.enabled = true
-singularity.autoMounts = true
+process.$dropTag.container		= '/software/bi/biocore_tools/git/singularity_conversion/singularity/dropest_latest-2018-02-23-a2fb0a3f76e4.img'
+process.container		= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_rnaseq-2018-02-08-1a58f4f1538a.img'
+singularity.enabled		= true
