--- a/params.config
+++ b/params.config
@@ -1,16 +1,8 @@
 params {
-
-	chunkSize = 5000000
 	pairs = "$baseDir/test/*_R{1,2}_001.fastq.gz"
-	barcode = "$baseDir/test/barcode.txt"
-	mode = "identity"
-	stats = "statistics.txt"
-	junction = "GAGTGATTGCTTGTGACGCCAA"
-	UMI = 100
+	config = "indrop_v1_2.xml"
 	genome = "$baseDir/test/genome.fa.gz"
 	annotation = "$baseDir/test/annotations.gtf"
-	strand ="yes"
-	umisize = 8
 	help   		= false
 	email	    = "luca.cozzuto@crg.eu"
 }
