fixing some stuff

--- a/params.config
+++ b/params.config
@@ -1,8 +1,8 @@
 params {
-	pairs = "$baseDir/test/*_R{1,2}_001.fastq.gz"
-	config = "indrop_v1_2.xml"
-	genome = "$baseDir/test/genome.fa.gz"
-	annotation = "$baseDir/test/annotations.gtf"
+	pairs = "$baseDir/test/SRR1784313_{1,2}.fastq.gz"
+	config = "$baseDir/test/indrop_v1_2.xml"
+	genome = "/db/ensembl/release-88/mus_musculus/genome/Mus_musculus.GRCm38.dna.chrom.fa"
+	annotation = "/db/ensembl/release-88/mus_musculus/gtf/Mus_musculus.GRCm38.88.chr.gtf"
 	help   		= false
 	email	    = "luca.cozzuto@crg.eu"
 }
