going on with the pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,15 @@ includeConfig "$baseDir/params.config"
 
 process {
   queue = 'short-sl7,long-sl7,mem_256,mem_512'
+  $QConRawReads	{
+      cpus=2
+      memory='12G'
+  }
+  
+  $QCFiltReads {
+  	cpus=2
+  	memory='12G'
+  }
   $dropTag {
       cpus=8
       memory='60G'			
@@ -32,10 +41,14 @@ process {
       cpus='4'
       memory='20G'
   }
-
+  $dropEst {
+      cpus='1'
+      memory='20G'
+  }
 }
 
-
-process.$dropTag.container		= '/software/bi/biocore_tools/git/singularity_conversion/singularity/dropest_latest-2018-02-23-a2fb0a3f76e4.img'
-process.container		= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_rnaseq-2018-02-08-1a58f4f1538a.img'
-singularity.enabled		= true
+process.$dropEst.container	= '/software/bi/biocore_tools/git/singularity_conversion/singularity/dropest_latest-2018-02-23-a2fb0a3f76e4.img'
+process.$dropTag.container	= '/software/bi/biocore_tools/git/singularity_conversion/singularity/dropest_latest-2018-02-23-a2fb0a3f76e4.img'
+process.$dropReport.container	= '/software/bi/biocore_tools/git/singularity_conversion/singularity/dropest_latest-2018-02-23-a2fb0a3f76e4.img'
+process.container			= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_rnaseq-2018-02-08-1a58f4f1538a.img'
+singularity.enabled			= true
