--- a/params.config
+++ b/params.config
@@ -1,8 +1,10 @@
 params {
 	pairs = "$baseDir/test/SRR1784313_{1,2}.fastq.gz"
 	config = "$baseDir/test/indrop_v1_2.xml"
+	output = "output"
 	genome = "/db/ensembl/release-88/mus_musculus/genome/Mus_musculus.GRCm38.dna.chrom.fa"
 	annotation = "/db/ensembl/release-88/mus_musculus/gtf/Mus_musculus.GRCm38.88.chr.gtf"
 	help   		= false
+	barcode_list = "$baseDir/test/indrop_v1_2.txt"
 	email	    = "luca.cozzuto@crg.eu"
 }
