--- a/nextflow.config
+++ b/nextflow.config
@@ -46,13 +46,14 @@ process {
       memory='20G'
   }
   $dropReport {
+	  queue = 'mem_1tb,short-sl7'
       cpus='1'
-      memory='40G'
+      memory='100G'
   }
 }
 
 process.$dropEst.container	= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_dropest-2018-02-28-d7c71a31d828.img'
 process.$dropTag.container	= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_dropEst-2018-02-26-2eb372c80d4d.img'
-process.$dropReport.container	= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_dropest-2018-03-01-0bae00925db8.img'
+process.$dropReport.container	= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_indrop-2018-03-02-b02efd4aff6f.img'
 process.container			= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_rnaseq-2018-02-08-1a58f4f1538a.img'
 singularity.enabled			= true
