--- a/nextflow.config
+++ b/nextflow.config
@@ -46,9 +46,9 @@ process {
       memory='20G'
   }
   $dropReport {
-	  queue = 'mem_1tb,short-sl7'
+	  queue = 'short-sl7'
       cpus='1'
-      memory='100G'
+      memory='20G'
   }
 }
 
