--- a/nextflow.config
+++ b/nextflow.config
@@ -5,55 +5,26 @@ manifest {
 
 includeConfig "$baseDir/params.config"
 
-
 process {
   queue = 'short-sl7,long-sl7,mem_256,mem_512'
-  $QConRawReads	{
-      cpus=2
-      memory='12G'
+  memory='12G'
+  container = 'biocorecrg/rnaseq'
+  withLabel: big_mem_cpus {
+        cpus = 8
+        memory = '64G'
   }
-  
-  $QCFiltReads {
-  	cpus=2
-  	memory='12G'
+ 
+  withLabel: indrop {
+        cpus='1'
+        memory='20G'
+        container = 'biocorecrg/rnaseq'
   }
-  $dropTag {
-      cpus=8
-      memory='60G'			
-  }
-
-  $mapping {
-      queue = 'mem_1tb,short-sl7'
-      cpus=8
-      memory='80G'	
-  }
-  
-  $getReadLength {
-      memory='1G'	
-  }
-
-  $buildIndex {
-      queue = 'mem_1tb,short-sl7'
+    
+  withLabel: index_mem_cpus {
       cpus='12'
       memory='100G'
   }
-  $qualimap {
-      cpus='4'
-      memory='20G'
-  }
-  $dropEst {
-      cpus='1'
-      memory='20G'
-  }
-  $dropReport {
-	  queue = 'short-sl7'
-      cpus='1'
-      memory='20G'
-  }
+ 
 }
 
-process.$dropEst.container	= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_dropest-2018-02-28-d7c71a31d828.img'
-process.$dropTag.container	= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_dropEst-2018-02-26-2eb372c80d4d.img'
-process.$dropReport.container	= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_indrop-2018-03-02-b02efd4aff6f.img'
-process.container			= '/software/bi/biocore_tools/git/singularity_conversion/singularity/biocorecrg_rnaseq-2018-02-08-1a58f4f1538a.img'
 singularity.enabled			= true
