fixing config docker

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ process {
   withLabel: indrop {
         cpus='1'
         memory='20G'
-        container = 'biocorecrg/rnaseq'
+        container = 'biocorecrg/indrops'
   }
     
   withLabel: index_mem_cpus {
