--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,6 @@ manifest {
     mainScript = 'indrop.nf'
 }
  
-
 includeConfig "$baseDir/params.config"
 
 process {
@@ -15,16 +14,16 @@ process {
   }
  
   withLabel: indrop {
-        cpus='1'
+        cpus=1
         memory='20G'
         container = 'biocorecrg/indrops'
   }
     
   withLabel: index_mem_cpus {
-      cpus='12'
+      cpus=12
       memory='100G'
   }
  
 }
 
-singularity.enabled         = true
+singularity.enabled = true
