--- a/params.config
+++ b/params.config
@@ -1,9 +1,10 @@
 params {
-	pairs = "$baseDir/test/SRR1784313_{1,2}.fastq.gz"
-	config = "$baseDir/test/indrop_v1_2.xml"
-	output = "output"
-	genome = "/db/ensembl/release-88/mus_musculus/genome/Mus_musculus.GRCm38.dna.chrom.fa"
-	annotation = "/db/ensembl/release-88/mus_musculus/gtf/Mus_musculus.GRCm38.88.chr.gtf"
-	barcode_list = "$baseDir/test/indrop_v1_2.txt"
-	email	    = "luca.cozzuto@crg.eu"
+	pairs = "$baseDir/data/*_{1,2}.fastq.gz"
+	config = "$baseDir/conf/indrop_v1_2_literature.xml"
+	barcode_list = "$baseDir/conf/barcode1_2_literature.txt"
+        output = "output"
+	genome = "$baseDir/anno/GRCh38.primary_assembly.genome.fa.gz"
+	annotation = "$baseDir/anno/gencode.v28.annotation.gtf"
+	mtgenes = "$baseDir/anno/mitoc_genes.txt"
+        email	    = "luca.cozzuto@crg.eu"
 }
