--- a/nextflow.config
+++ b/nextflow.config
@@ -5,20 +5,26 @@ manifest {
 includeConfig "$baseDir/params.config"
 
 process {
-  queue = 'short-sl7,long-sl7,mem_256,mem_512'
+  queue = 'short-sl7,long-sl7,mem_256,mem_512,biocore-el7'
   memory='12G'
-  container = 'biocorecrg/rnaseq'
+  container = 'biocorecrg/rnaseq:1.0'
   withLabel: big_mem_cpus {
         cpus = 8
         memory = '64G'
   }
  
-  withLabel: indrop {
+  withLabel: indrop_multi_cpus {
+        cpus=8
+        memory='40G'
+        container = 'biocorecrg/indrops'
+  }
+
+  withLabel: indrop_one_cpu {
         cpus=1
         memory='20G'
         container = 'biocorecrg/indrops'
   }
-    
+  
   withLabel: index_mem_cpus {
       cpus=12
       memory='100G'
