--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ manifest {
 includeConfig "$baseDir/params.config"
 
 process {
-  queue = 'short-sl7,long-sl7,mem_256,mem_512,biocore-el7'
+  queue = 'short-sl7,long-sl7,mem_256,mem_512'
   memory='12G'
   container = 'biocorecrg/rnaseq:1.0'
   withLabel: big_mem_cpus {
@@ -26,7 +26,7 @@ process {
   }
   
   withLabel: index_mem_cpus {
-      cpus=12
+      cpus=8
       memory='100G'
   }
  
