adding support to v3_4 v3_3

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,20 +16,22 @@ process {
   withLabel: indrop_multi_cpus {
         cpus=8
         memory='40G'
-        container = 'biocorecrg/indrops'
+        container = 'biocorecrg/indrops:0.2'
   }
 
   withLabel: indrop_one_cpu {
         cpus=1
         memory='40G'
-        container = 'biocorecrg/indrops'
+        container = 'biocorecrg/indrops:0.2'
   }
   
   withLabel: index_mem_cpus {
       cpus=8
       memory='100G'
+      time='24h'
   }
  
 }
 
 singularity.enabled = true
+singularity.cacheDir = "$baseDir/singularity"
