--- a/params.config
+++ b/params.config
@@ -1,10 +1,12 @@
 params {
-	pairs = "$baseDir/data/*_{1,2}.fastq.gz"
-	config = "$baseDir/conf/indrop_v1_2_literature.xml"
-	barcode_list = "$baseDir/conf/barcode1_2_literature.txt"
-        output = "output"
-	genome = "$baseDir/anno/GRCh38.primary_assembly.genome.fa.gz"
-	annotation = "$baseDir/anno/gencode.v28.annotation.gtf"
-	mtgenes = "$baseDir/anno/mitoc_genes.txt"
-        email	    = "luca.cozzuto@crg.eu"
+	pairs         = "$baseDir/test_v3/*R{1,2,3,4}.fastq.gz"
+	config        = "$baseDir/conf/indrop_v3.xml"
+	barcode_list  = "$baseDir/conf/indrop_v3_barcodes.txt"
+    output        = "output_v3"
+	genome        = "$baseDir/anno/test.fa.gz"
+	annotation    = "$baseDir/anno/gencode.v28.annotation.gtf"
+    mtgenes       = "$baseDir/anno/mitoc_genes.txt"
+    library_tag   = "AGATATAA"
+    version       = "3_4"
+    email	      = "yourmail@yourdomain"
 }
