--- a/params.config
+++ b/params.config
@@ -1,12 +1,12 @@
 params {
-	pairs         = "$baseDir/test_v3/*R{1,2,3,4}.fastq.gz"
-	config        = "$baseDir/conf/indrop_v3.xml"
-	barcode_list  = "$baseDir/conf/indrop_v3_barcodes.txt"
-    output        = "output_v3"
-	genome        = "$baseDir/anno/test.fa.gz"
-	annotation    = "$baseDir/anno/gencode.v28.annotation.gtf"
+    pairs         = "$baseDir/data/*_{1,2}.fastq.gz"
+    config        = "$baseDir/conf/indrop_v1_2.xml"
+    barcode_list  = "$baseDir/conf/indrop_v1_2_barcodes.txt"
+    output        = "output"
+    genome        = "$baseDir/anno/genome.fa.gz"
+    annotation    = "$baseDir/anno/anno.gtf"
     mtgenes       = "$baseDir/anno/mitoc_genes.txt"
-    library_tag   = "AGATATAA"
-    version       = "3_4"
-    email	      = "yourmail@yourdomain"
+    library_tag   = ""
+    version       = "1-2"
+    email	  = "yourmail@yourdomain"
 }
