adding db store path

--- a/params.config
+++ b/params.config
@@ -6,7 +6,9 @@ params {
     genome        = "$baseDir/anno/genome.fa.gz"
     annotation    = "$baseDir/anno/anno.gtf"
     mtgenes       = "$baseDir/anno/mitoc_genes.txt"
+    dbdir         = "$baseDir/indexdb"
     library_tag   = ""
     version       = "1-2"
     email	  = "yourmail@yourdomain"
+
 }
