adding possibility to keep multimapping

--- a/params.config
+++ b/params.config
@@ -1,14 +1,13 @@
 params {
-    pairs         = "$baseDir/data/*_{1,2}.fastq.gz"
-    config        = "$baseDir/conf/indrop_v1_2.xml"
-    barcode_list  = "$baseDir/conf/indrop_v1_2_barcodes.txt"
-    output        = "output"
-    genome        = "$baseDir/anno/genome.fa.gz"
-    annotation    = "$baseDir/anno/anno.gtf"
-    mtgenes       = "$baseDir/anno/mitoc_genes.txt"
-    dbdir         = "$baseDir/indexdb"
-    library_tag   = ""
-    version       = "1-2"
-    email	  = "yourmail@yourdomain"
-
+     pairs         = "$baseDir/test_v3/*R{1,2,3,4}.fastq.gz"
+     config        = "$baseDir/conf/indrop_v3.xml"
+     barcode_list  = "$baseDir/conf/indrop_v3_barcodes.txt"
+     output        = "output_v3"
+     genome        = "$baseDir/anno/test.fa.gz"
+     annotation    = "$baseDir/anno/gencode.v28.annotation.gtf"
+     mtgenes       = "$baseDir/anno/mitoc_genes.txt"
+     keepmulti     = ""
+     library_tag   = "AGATATAA"
+     version       = "3_4"
+     email	      = "yourmail@yourdomain"
 }
