--- a/docker/Dockerfile2
+++ b/docker/Dockerfile2
@@ -31,17 +31,15 @@ RUN \
   mkdir -p ~/R/x86_64-redhat-linux-gnu-library/3.4
 
 RUN \
-  echo '.libPaths(c("~/R/x86_64-redhat-linux-gnu-library/3.4", .libPaths()))' > .Rprofile && \
+  R -e 'dir.create(Sys.getenv("R_LIBS_USER"), recursive=T)' && \
   R -e 'chooseCRANmirror(ind=52); install.packages("ks", dependencies=c("Depends", "Imports", "LinkingTo"))' && \
-  R -e 'devtools::install_local("~/dropEst/dropestr/", dependencies=T)' && \
-  R -e 'chooseCRANmirror(ind=52); install.packages(c("dplyr", "ggplot2", "rlang"))'
+  R -e 'devtools::install_local("~/dropEst/dropestr/", dependencies=T)'
+
 RUN \
   mkdir -p dropEst/build && \
   cd dropEst/build && \
   cmake ../ && \
   make
-
-COPY dropestr/dropReport.Rsc /home/user/dropEst/build/
 
 ENV PATH=/home/user/dropEst/build:$PATH \
   LD_LIBRARY_PATH=/usr/local/lib/R/lib/:$LD_LIBRARY_PATH \
