--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ manifest {
 includeConfig "$baseDir/params.config"
 
 process {
-  queue = 'short-sl7,long-sl7,mem_256,mem_512'
+  queue = 'short-sl7,long-sl7,biocore-el7'
   memory='12G'
   container = 'biocorecrg/rnaseq:1.0'
   withLabel: big_mem_cpus {
@@ -16,7 +16,7 @@ process {
   withLabel: indrop_multi_cpus {
         cpus=8
         memory='40G'
-        container = 'biocorecrg/indrops:0.2'
+        container = 'biocorecrg/indrops:0.3'
   }
 
   withLabel: indrop_one_cpu {
