--- a/params.config
+++ b/params.config
@@ -6,7 +6,8 @@ params {
      genome        = "$baseDir/anno/test.fa.gz"
      annotation    = "$baseDir/anno/gencode.v28.annotation.gtf"
      mtgenes       = "$baseDir/anno/mitoc_genes.txt"
-     keepmulti     = ""
+     dbdir         = "$baseDir/db"
+     keepmulti     = "NO"
      library_tag   = "AGATATAA"
      version       = "3_4"
      email	      = "yourmail@yourdomain"
