--- a/config.yaml
+++ b/config.yaml
@@ -1,19 +1,10 @@
 title: "Single cell sequencing project"
-subtitle: "Indrop technology"
+subtitle: "Indrop-Flow pipeline"
 intro_text: False
 
 custom_logo: '/software/bi/biocore_tools/logo/biocore-logo.png'
 custom_logo_url: 'https://biocore.crg.eu'
 custom_logo_title: 'Bioinformatics Core Facility @ CRG'
-
-report_header_info:
-    - PI: PI
-    - User: USER 
-    - Date: DATE
-    - Contact E-mail: 'luca.cozzuto@crg.eu'
-    - Application Type: 'scRNA-seq'
-    - Sequencing Platform: 'HiSeq 2500 High Output V4'
-    - Reference Genome: 'Mus Musculus, Ensembl version 88'
 
 extra_fn_clean_exts:
     - type: remove
