--- a/nextflow.config
+++ b/nextflow.config
@@ -15,14 +15,20 @@ process {
  
   withLabel: indrop_multi_cpus {
         cpus=8
-        memory='40G'
-        container = 'biocorecrg/indrops:0.3'
+        memory='60G'
+        container = 'biocorecrg/indrops:0.4'
   }
 
   withLabel: indrop_one_cpu {
         cpus=1
+        memory='60G'
+        container = 'biocorecrg/indrops:0.4'
+  }
+  
+  withLabel: dropreport {
+        cpus=1
         memory='40G'
-        container = 'biocorecrg/indrops:0.3'
+        container = 'biocorecrg/indrops:0.4'
   }
   
   withLabel: index_mem_cpus {
