--- a/params.config
+++ b/params.config
@@ -5,7 +5,7 @@ params {
      output        = "output_v3"
      genome        = "$baseDir/anno/test.fa.gz"
      annotation    = "$baseDir/anno/gencode.v28.annotation.gtf"
-     mtgenes       = "$baseDir/anno/mitoc_genes.txt"
+     mtgenes       = ""
      dbdir         = "$baseDir/db"
      keepmulti     = "NO"
      library_tag   = "AGATATAA"
